--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Document</title>
+	<title>Site</title>
+	<link rel="stylesheet" href="css/style.css">>
 </head>
 <body>
-    <h1>GIT урок2</h1>>
-    <p>новое изменение файла index.html</p>>
-
+    <h1>site here</h1>
+    <p>some text</p>
+    <p>la la la</p>
 </body>
 </html>
