--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 	<link rel="stylesheet" href="css/style.css">>
 </head>
 <body>
-    <h1>site here</h1>
-    <p>some text</p>
-    <p>la la la</p>
+    <p>Lorem Master the profession of a web developer in 4.5 months and become a sought-after IT</p>
 </body>
 </html>
